fix z-index of dropdown

--- a/src/controls/Dropdown/Dropdown.scss
+++ b/src/controls/Dropdown/Dropdown.scss
@@ -149,7 +149,6 @@ $chevron-size: 6px;
         top: 11px;
         transform: scale(1);
         letter-spacing: $control-letter-spacing;
-        z-index: 1;
       }
 
       &:before {
